Fixed visual glitches with search bar on mobile
Search bar no longer disappears on mobile. Fixed navbar height shrinking when using search bar in login screen.

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -5,7 +5,7 @@
 
 header.navbar {
     background-color: var(--main-color);
-    height: 70px;
+    min-height: 70px;
     color: black;
 }
 
